deploy/k8s/influxdb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  namespace: cicd
  labels:
    app: influxdb
spec:
  serviceName: influxdb
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: influxdb:2.7-alpine
          ports:
            - containerPort: 8086
          volumeMounts:
            - name: influxdb-data
              mountPath: /var/lib/influxdb2
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
      volumes:
        - name: influxdb-data
          persistentVolumeClaim:
            claimName: influxdb-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: cicd
  labels:
    app: influxdb
spec:
  ports:
    - port: 8086
      targetPort: 8086
  selector:
    app: influxdb
